[gd_scene load_steps=6 format=2]

[ext_resource path="res://DarkMountain.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameOver.gd" type="Script" id=2]
[ext_resource path="res://art/Pixel Game UI/Assets/New Game.png" type="Texture" id=3]
[ext_resource path="res://art/Pixel Game UI/Assets/Game Over.png" type="Texture" id=4]
[ext_resource path="res://art/Pixel Game UI/Assets/New Game_2.png" type="Texture" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_top = 60.0
margin_bottom = 83.0

[node name="GameOverTitle" type="TextureRect" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
texture = ExtResource( 4 )
stretch_mode = 6

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -40.0
margin_right = 148.0
margin_bottom = 40.0

[node name="NewGame" type="TextureButton" parent="MarginContainer2"]
margin_right = 296.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
expand = true

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]
offset = Vector2( 550, 300 )
scale = Vector2( 4, 4 )
transform = Transform2D( 4, 0, 0, 4, 550, 300 )

[node name="SinTimer" type="Timer" parent="."]
wait_time = 4096.0
autostart = true

[connection signal="pressed" from="MarginContainer2/NewGame" to="." method="_on_NewGame_pressed"]
